--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,9 @@
             "request": "launch",
             "program": "${workspaceFolder}/vpp_api_hello.py",
             "console": "integratedTerminal",
-            "justMyCode": true,
+            "justMyCode": false,
             "sudo": true,
             "args": ["-d", "connect"]
-
         }
     ]
 }
