Cleanup README.md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "ipaddress",
+        "libvppapiclient",
         "papi",
+        "sockclnt",
         "venv",
         "VPPAPI"
     ]
