Add an api inspector

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "sudo": true,
-            "args": ["-d", "stats"]
+            "args": ["api"]
         }
     ]
 }
